# fastapicode

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  redis.conf  redis.env  test.sh
prometheus/: prometheus.yml
src/: api.py
