[tool.poetry]
name = "exam-example"
version = "0.1.0"
description = ""
authors = ["Cynerio Test"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70"
redis = "^4.0"
uvicorn = "^0.15"
prometheus-client = "^0.12.0"
starlette-exporter = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
